--- a/01.html
+++ b/01.html
@@ -13,7 +13,7 @@
 <a href=http://noa-prolab.co.jp/pdf/text/seigo_officekiso_jyohomoral_365-2019.pdf target=_new>テキストの修正箇所</a><br>noa出版へリンク<p>
 <a href=05.html target=main>圧縮ファイルの解凍</a><p>
 <a href=06.html target=main>NESSについて</a><p>
-<a href= target=main></a><p>
+<a href=07.html target=main>提出ファイルのプレビューについて</a><p>
 <a href= target=main></a><p>
 </body>
 </html>
