--- a/03.html
+++ b/03.html
@@ -21,6 +21,7 @@
 ４．アドバイザー教員（ゼミ担当教員）に相談をする<p>
 ５．学生支援センターに相談する<br>
 　　中央館１階カウンター（学生部横）<p>
+  この他に、<a href="https://univ.osaka-seikei.jp/life/facility/lc/">ラーニングコモンズ</a>での質問や対面質問時間を活用してください。<p>
 </blockquote>
 </body>
 </html>
