--- a/01.html
+++ b/01.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
 <title>menu</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -7,15 +7,17 @@
 <b>【Contents】</b><p>
 <a href=03.html target=main>はじめに</a><p>
 <a href=04.html target=main>利用環境について</a><p>
-<a href= target=main>手順についての解説</a><p>
-<a href=down.pdf target=main>classroomでのファイルのDL、課題の提出</a><p>
 <a href=save.pdf target=main>ファイルの保存場所について</a><p>
-<a href=http://noa-prolab.co.jp/pdf/text/seigo_officekiso_jyohomoral_365-2019.pdf target=_new>テキストの修正箇所</a><br>noa出版へリンク<p>
-<a href=comment.pdf target=main>Classroomでのコメント(質問)方法</a><p>
-<a href=recovery.pdf target=main>課題ファイルを削除した場合の対処</a><p>
+<a href=http://noa-prolab.co.jp/pdf/text/seigo_officekiso_jyohomoral_365-2019.pdf target=_new>テキスト(前期)の修正箇所</a><br>noa出版へリンク<p>
 <a href=05.html target=main>圧縮ファイルの解凍</a><p>
 <a href=06.html target=main>NESSについて</a><p>
-<a href= target=main></a><p>
+<a href=http://rasti.jp/ target=main>Rastiについて</a><br>詳しくはメールの通知を参照してください<p>
+<b>Google Classroom関連</b><p>
+<a href=07.html target=main>提出ファイルのプレビューについて</a><p>
+<a href=down.pdf target=main>classroomでのファイルのDL、課題の提出</a><p>
+<a href=comment.pdf target=main>Classroomでのコメント(質問)方法</a><p>
+<a href=recovery.pdf target=main>課題ファイルを削除した場合の対処</a><p>
+
 <a href= target=main></a><p>
 </body>
 </html>
