--- a/04.html
+++ b/04.html
@@ -1,4 +1,4 @@
-<html>
+﻿<html>
 <head>
 <title></title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
@@ -12,21 +12,22 @@
 <table border=0>
 <tr><td valign=top>OS</td><td valign=top>Microsoft Windows10<br>ClassroomなどもPC上で閲覧、利用するようにしてください。<br>MacintoshやAndoroidでの演習には対応していませんので、自己責任で対応してください。</td></tr>
 <tr><td valign=top>ブラウザー</td><td valign=top>Google Chrome<br>Classroomなどを使う関係上、相性の良いものを選んでいます。他のブラウザでも対応できます。ただし、最新のものを利用してください。</td></tr>
-<tr><td valign=top nowrap>ソフトウェア</td><td valign=top>Microsoft Word365/2019（日本語ワープロ）<br>Microsoft Excel365/2019（表計算）<br>Microsoft PowerPoint365/2019（後期：プレゼンテーション）<br>※それぞれ2019の場合は、画面表示や操作方法の一部が異なります。<br>上記以外のソフトウェアの利用では、テキストの説明とは合致しません。</td></tr>
+<tr><td valign=top nowrap>ソフトウェア</td><td valign=top>Microsoft Word365/2019（日本語ワープロ）<br>Microsoft Excel365/2019（表計算）<br>Microsoft PowerPoint365/2019（後期：プレゼンテーション）<br>※それぞれ2019の場合は、画面表示や操作方法の一部が異なります。<br>上記以外のソフトウェアの利用では、テキストの説明とは合致しませんので、使用しないでください。</td></tr>
 </table>
 <br>自宅で利用環境が整っていない方は、<font color=#ff0000>3密に気を付けて</font>大学のPC教室を利用してください。<br>
 　北館2階　200/203/205/213/212(自習室)<br>
 　北館3階　301/303<br>
 　北館4階　402<br>
 ※ただし、授業利用中は自由利用はできません。<br>　<br>
-<b>経営学部優先利用時間</b>対面質問にも対応<br>
+<b>経営学部優先利用時間（前期のみ）</b>対面質問にも対応<br>
 月曜日３・４限　301/303<br>
-金曜日２限　203/213<br>　
+金曜日２限　203/213<br>
+後期については、各授業時間・授業教室が確保されています（対面質問時間ではありません。質問はコメントなどを使って行ってください）<br>　
 </td></tr>
-<tr><td valign=top nowrap><nowrap>指定テキスト　</nowrap></td><td valign=top>「イチからしっかり学ぶ!Office基礎と情報モラルOffice365・Office2019対応【NESS付】」<br>noa出版<br>
-※指定テキストに沿って演習・課題に取り組みます。また、オンライン教材NESSの利用権も含まれています。<br>　<br>
+<tr><td valign=top nowrap><nowrap>指定テキスト　<wbr>（前期）</nowrap></td><td valign=top>「イチからしっかり学ぶ!Office基礎と情報モラルOffice365・Office2019対応【NESS付】」<br>noa出版<br>
+※指定テキストに沿って演習・課題に取り組みます。また、オンライン教材NESSの利用権も含まれています。<br>
 </td></tr>
-<tr><td valign=top></td><td valign=top></td></tr>
+<tr><td valign=top>（後期）</td><td valign=top>「考える　伝える　分かち合う　情報活用力（Rasti2回付）」<br>noa出版<br></td></tr>
 </table>
 </blockquote>
 </body>
